Added background color and a bootstrap stylesheet link to the index.html file. A jumbotron class, in light purple, is added to the app.component.css. The jumbotron class is implemented around the main title of the website in the app component html file.

--- a/fjmSite/src/app/app.component.html
+++ b/fjmSite/src/app/app.component.html
@@ -1,7 +1,10 @@
 <!--The content below is only a placeholder and can be replaced.-->
+
+<div class="jumbotron">
+
 <div style="text-align:center">
   <h1>
     Jobs submitted to the national life science supercomputer
   </h1>
-  
+</div>
 
