Added an exportable interface named Job as a typescript file. The file contains the appropriate attributes for backend server connection. The GET method of all jobs is tested by simpel implementation in the app.component file. The import Http is used in the app component class. In additon, the app module file is updated with imports for Http transport enabeling.

--- a/fjmSite/src/app/app.component.html
+++ b/fjmSite/src/app/app.component.html
@@ -1,10 +1,24 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
+<div class="container">
 <div class="jumbotron">
 
 <div style="text-align:center">
   <h1>
     Jobs submitted to the national life science supercomputer
   </h1>
+</div>
+</div>
+
+
+<div class="container">
+<ul *ngIf="jobs">
+  <li *ngFor="let job of jobs">
+    Job name: {{job.name}} <br>
+    Job state: {{job.state}} <br>
+    <p>Date of Job submission = {{ job.timestamps.submitted | date :  "dd.MM.y" }}</p>
+  </li>
+
+</ul>
 </div>
 
