The Job attribute timestamp is formattet to only showing the date. The paragraph and break html annotations are applied to seperate the information. In addtion the job objects are listed in a bullet listing.

--- a/fjmSite/src/app/app.component.html
+++ b/fjmSite/src/app/app.component.html
@@ -14,9 +14,9 @@
 <div class="container">
 <ul *ngIf="jobs">
   <li *ngFor="let job of jobs">
-    Job name: {{job.name}} <br>
+    <p> Job name: {{job.name}} <br>
     Job state: {{job.state}} <br>
-    <p>Date of Job submission = {{ job.timestamps.submitted | date :  "dd.MM.y" }}</p>
+    Date of Job submission = {{ job.timestamps.submitted | date :  "dd.MM.y" }}</p>
   </li>
 
 </ul>
