--- a/fjmSite/src/app/app.component.css
+++ b/fjmSite/src/app/app.component.css
@@ -2,4 +2,7 @@
     background-color:rgba(45, 42, 201, 0.153);
     
   }
-  
+  .selected {
+    background-color: #CFD8DC !important;
+    color: white;
+  }
