Implemented orderby on the job list. The earliest job submitted is first.

--- a/fjmSite/src/app/app.component.html
+++ b/fjmSite/src/app/app.component.html
@@ -20,38 +20,52 @@
       </div>
       </div>
 
+<section class="menu">
+<div class="row"> 
 
+
+  <div class="col-6"> 
 <div class="container">
 <ul *ngIf="jobs">
-  <li *ngFor="let job of jobs" (click)="onSelect(job)">
+  <li *ngFor="let job of jobs | orderBy : 'timestamps.submitted'" (click)="onSelect(job)">
     
-    <p> Job name: {{job.name}} <br>
+    <p> Job name: {{job.name }} <br>
     Job state: {{job.state}} <br>
     Date of Job submission = {{ job.timestamps.submitted | date :  "dd.MM.yyyy H:mm" }}</p>
   </li>
 
 </ul>
+
 </div>
 
-<div *ngIf="selectedJob">
+</div>
 
-    <h2>{{selectedJob.name | uppercase}} Details</h2>
-    <div><span>id: </span>{{selectedJob.state}}</div>
-    <div>
-      <label>name:
-        <input [(ngModel)]="selectedJob.name" placeholder="name"/>
-      </label>
+</div>
+</section>
+
+
+  <div class="container">
+    <div *ngIf="selectedJob">
+    
+        <h2>{{selectedJob.name | uppercase}} Details</h2>
+        <div><span>id: </span>{{selectedJob.state}}</div>
+        <div>
+          <label>name:
+            <input [(ngModel)]="selectedJob.name" placeholder="name"/>
+          </label>
+        </div>
+      
+      </div>
     </div>
-  
-  </div>
 
-
-<ejs-datepicker id='datepickerStart' placeholder='Select a START date' [value]='value | date: "dd.MM.yyyy"' [min]='minDate' [max]='maxDate'> </ejs-datepicker>
-<ejs-datepicker id='datepickerEnd' placeholder='Select an END date' [value]='value | date : "dd.MM.yyyy"' [min]='minDate' [max]='maxDate'> </ejs-datepicker>
 
 <div class="container">
     <h2> Simpel statistics on jobs run using competurome </h2>
   <p> Terminated : {{stats?.count.terminated}}</p>
+ 
   </div>
 
+  
+
  
+
