Created an about-fjm component to seperate the code from the app component.

--- a/fjmSite/src/app/app.component.html
+++ b/fjmSite/src/app/app.component.html
@@ -1,22 +1,18 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
+<div style="text-align:center">
+<h1>{{title}}</h1>
+</div>
 
-
-<div class="container">
-    <h1>General informatin about the fancy job monitoring API</h1> <br>
-    <p>{{info?.name}} </p>
-    <p> {{info?.version.name}}</p>
-    <p> {{info?.version.major}}</p>
-  
-  </div>
+<app-about-fjm></app-about-fjm>
 
   <div class="container">
       <div class="jumbotron">
       
       <div style="text-align:center">
-        <h1>
+        <h2>
           Jobs submitted to the national life science supercomputer
-        </h1>
+        </h2>
       </div>
       </div>
 
