--- a/fjmSite/src/app/app.component.html
+++ b/fjmSite/src/app/app.component.html
@@ -1,13 +1,17 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
-<div style="text-align:center">
-<h1>{{title}}</h1>
-</div>
+
+<div style="text-align:left">
+  
+    <img width="100" [routerLink]="['/frontpage']" alt="SiteLogo" src='assets/images/Logo.jpg'>
+  </div>
 
 
 <div class="container">
     <router-outlet></router-outlet>  
 </div>
+
+
 
  
 
