Implemented a navigation bar on the frontpage with the link for the job submitted page. The job submitted page has a back to frontpage button. Every job in list is 'onSelect'/click shown in detail on this page.

--- a/fjmSite/src/app/frontpage/frontpage.component.html
+++ b/fjmSite/src/app/frontpage/frontpage.component.html
@@ -1,6 +1,14 @@
 
+<div style="text-align:center">
+    <h1>{{title}}</h1>
+    </div>
+
 <app-about-fjm></app-about-fjm>
 
-<app-jobs-submitted></app-jobs-submitted>
-
 <app-stats-jobs></app-stats-jobs>
+
+<div class="jumbotron">
+    <nav class="nav navbar-nav">
+        <a routerLink ="/jobs-submitted" routerLinkActive="active">See jobs submitted</a>
+      </nav>
+    </div>
