--- a/fjmSite/src/app/jobs-submitted/jobs-submitted.component.html
+++ b/fjmSite/src/app/jobs-submitted/jobs-submitted.component.html
@@ -30,8 +30,13 @@
 
 </div>
 
+  
 <app-job-detail [job]="selectedJob"></app-job-detail>
 
 </div>
 </section>
 
+
+<p>
+    <button (click)="gotoFrontpage()">Back to frontpage</button>
+</p>
