--- a/fjmSite/src/app/app.component.html
+++ b/fjmSite/src/app/app.component.html
@@ -1,15 +1,17 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
+  <div class="jumbotron">
+      <div style="text-align:left">
+          <img width="45px" [routerLink]="['/frontpage']" alt="SiteLogo" src='assets/images/Logo.jpg'>
+    </div>
 
-<div style="text-align:left">
-  
-    <img width="100" [routerLink]="['/frontpage']" alt="SiteLogo" src='assets/images/Logo.jpg'>
-  </div>
-
-
+ 
 <div class="container">
+   
     <router-outlet></router-outlet>  
+   
 </div>
+ 
 
 
 
