--- a/fjmSite/src/app/frontpage/frontpage.component.html
+++ b/fjmSite/src/app/frontpage/frontpage.component.html
@@ -1,14 +1,19 @@
 
+
 <div style="text-align:center">
     <h1>{{title}}</h1>
     </div>
+
 
 <app-about-fjm></app-about-fjm>
 
 <app-stats-jobs></app-stats-jobs>
 
-<div class="jumbotron">
-    <nav class="nav navbar-nav">
-        <a routerLink ="/jobs-submitted" routerLinkActive="active">See jobs submitted</a>
-      </nav>
-    </div>
+
+<button routerLink ="/jobs-submitted"  width="10" routerLinkActive="active">Go to jobs submitted</button>
+  
+
+
+
+
+  
