--- a/fjmSite/src/app/stats-jobs/stats-jobs.component.html
+++ b/fjmSite/src/app/stats-jobs/stats-jobs.component.html
@@ -1,6 +1,11 @@
 
 <div class="container">
     <h2> Simpel statistics on jobs run using computerome </h2>
-  <p> Terminated : {{stats?.count.terminated}}</p>
- 
-  </div>
+
+  <div>
+      <ngx-charts-bar-vertical [view]="view" [scheme]="colorScheme" [results]="single" [gradient]="gradient" [xAxis]="showXAxis"
+        [yAxis]="showYAxis" [legend]="showLegend" [showXAxisLabel]="showXAxisLabel" [showYAxisLabel]="showYAxisLabel" [xAxisLabel]="xAxisLabel"
+        [yAxisLabel]="yAxisLabel" (select)="onSelect($event)">
+      </ngx-charts-bar-vertical>
+    </div>
+</div>
