Moved Component into one folder called fjmComponents.

--- a/fjmSite/src/app/fjmComponent/frontpage/frontpage.component.html
+++ b/fjmSite/src/app/fjmComponent/frontpage/frontpage.component.html
@@ -10,7 +10,7 @@
 <app-stats-jobs></app-stats-jobs>
 
 
-<button routerLink ="/jobs-submitted"  width="10" routerLinkActive="active">Go to jobs submitted</button>
+<a routerLink ="/jobs-submitted" style="text-align:right" routerLinkActive="active">Go to jobs submitted --> </a>
   
 
 
