--- a/fjmSite/src/app/fjmComponent/about-fjm/about-fjm.component.html
+++ b/fjmSite/src/app/fjmComponent/about-fjm/about-fjm.component.html
@@ -2,7 +2,7 @@
     <div class="jumbotron">
       <h2>General informatin about the fancy job monitoring API</h2> <br>
       <p> This is a {{info?.description}}. This fjm-api is a service for monitoring the status of jobs submitted
-          to our supercomputer. The web API is called {{info?.name}} and it enables you to make client requests to a database that contains data on the job performance by the supercomputer - computerome. </p>
+          to me - the supercomputer. The web API is called {{info?.name}}  </p>
       Connect directly to the <a target="_blank" rel="noopener" href="{{info?.specsURI}}"> web API Specs in json format</a> here. This is the HTTP API specification of this service
      
       <p> The timezone for timestamp-related values is {{info?.timezone}}.
