--- a/fjmSite/src/app/fjmComponent/frontpage/frontpage.component.html
+++ b/fjmSite/src/app/fjmComponent/frontpage/frontpage.component.html
@@ -10,7 +10,7 @@
 <app-stats-jobs></app-stats-jobs>
 
 
-<a routerLink ="/jobs-submitted" style="text-align:right" routerLinkActive="active">Go to jobs submitted --> </a>
+<a routerLink ="/jobsubmitted" style="text-align:right" routerLinkActive="active">Go to jobs submitted to me --> </a>
   
 
 
