--- a/fjmSite/src/app/fjmComponent/stats-jobs/stats-jobs.component.html
+++ b/fjmSite/src/app/fjmComponent/stats-jobs/stats-jobs.component.html
@@ -1,9 +1,9 @@
 
 <div class="container">
-    <h2> Mock up of simpel statistics on my job performance </h2>
+    <h2> Mock up of simpel statistics of my job performance </h2>
 
   <div>
-      <ngx-charts-bar-vertical [view]="view" [scheme]="colorScheme" [results]="single" [gradient]="gradient" [xAxis]="showXAxis"
+      <ngx-charts-bar-vertical [view]="view" [scheme]="colorScheme" [results]="chart" [gradient]="gradient" [xAxis]="showXAxis"
         [yAxis]="showYAxis" [legend]="showLegend" [showXAxisLabel]="showXAxisLabel" [showYAxisLabel]="showYAxisLabel" [xAxisLabel]="xAxisLabel"
         [yAxisLabel]="yAxisLabel" [yAxisTickFormatting]='axisFormat' (select)="onSelect($event)">
       </ngx-charts-bar-vertical>
