1 Unit test implemented: Implemented a simpel test in the app.component.spec.ts. The test verifies that the logo text computerome is equal to computerome. Test success. In addtion, the frontpage.spec.ts file was modified for testing of frontpage title. But failed test due to missing test connection function. Layers for test to succeed are many at this point. Apply test first from extreme programming?!

--- a/fjmSite/src/app/app.component.html
+++ b/fjmSite/src/app/app.component.html
@@ -2,7 +2,8 @@
   <div class="jumbotron">
       <div style="text-align:left">
           <img width="45px" [routerLink]="['/frontpage']" alt="SiteLogo" src='assets/images/Logo.jpg'>
-    </div>
+    {{title}}
+        </div>
 
 <div class="container"> 
     <router-outlet></router-outlet>  
