--- a/fjmSite/src/app/fjmComponent/stats-jobs/stats-jobs.component.html
+++ b/fjmSite/src/app/fjmComponent/stats-jobs/stats-jobs.component.html
@@ -1,6 +1,6 @@
 
 <div class="container">
-    <h2> Mock up of simpel statistics of my job performance </h2>
+    <h2> Mock up bar chart with simple statistics on my job performance </h2>
 
   <div>
       <ngx-charts-bar-vertical [view]="view" [scheme]="colorScheme" [results]="chart" [gradient]="gradient" [xAxis]="showXAxis"
