--- a/fjmSite/src/app/fjmComponent/about-fjm/about-fjm.component.html
+++ b/fjmSite/src/app/fjmComponent/about-fjm/about-fjm.component.html
@@ -1,14 +1,14 @@
 <div class="container">
     <div class="jumbotron">
-      <h2>General informatin about the fancy job monitoring API</h2> <br>
-      <p> This is a {{info?.description}}. This fjm-api is a service for monitoring the status of jobs submitted
+      <h2>General information about the fancy job monitoring (fjm) API</h2> <br>
+      <p> This is a {{info?.description}}. This API is a service for monitoring the status of jobs submitted
           to me - the supercomputer. The web API is called {{info?.name}}  </p>
-      Connect directly to the <a target="_blank" rel="noopener" href="{{info?.specsURI}}"> web API Specs in json format</a> here. This is the HTTP API specification of this service
+      Connect directly to the <a target="_blank" rel="noopener" href="{{info?.specsURI}}"> web API Specs in json format</a> here. This is the HTTP API specification of this service.
      
       <p> The timezone for timestamp-related values is {{info?.timezone}}.
         
-      This API is version {{info?.version.name}}</p>
-      <p> Is the API version released: {{info?.version.isRelease}}</p>
+      This API is version {{info?.version.name}}.</p>
+      <p> Is the API version released: {{info?.version.isRelease}} it is.</p>
       <!-- <p> major version {{info?.version.major}}</p>
       <p> {{info?.version.minor}}</p>
       <p> {{info?.version.patch}}</p> -->
